SERVER-42291 generate correct bounds for $nin null queries