jstests/core/null_query_semantics.js
@@ -63,6 +63,63 @@
             assert(resultsEq(projectResults, extractAValues(expected)), tojson(projectResults));
         }());
 
+        // Test the semantics of the query {a: {$nin: [null, <number>]}}.
+        (function testNotInNullQuery() {
+            const query = {a: {$nin: [null, 4]}};
+            const noProjectResults = coll.find(query).toArray();
+            const expected = [
+                {_id: "a_empty_subobject", a: {}},
+                {_id: "a_subobject_b_not_null", a: {b: "hi"}},
+                {_id: "a_subobject_b_null", a: {b: null}},
+                {_id: "a_subobject_b_undefined", a: {b: undefined}},
+            ];
+
+            // TODO: SERVER-21929: $in may (or may not) miss fields with value "undefined".
+            const expectedWithUndefined = expected.concat([
+                {_id: "a_undefined", a: undefined},
+            ]);
+            assert(resultsEq(noProjectResults, expected) ||
+                       resultsEq(noProjectResults, expectedWithUndefined),
+                   noProjectResults);
+
+            const projectResults = coll.find(query, projectToOnlyA).toArray();
+            assert(resultsEq(projectResults, extractAValues(expected)) ||
+                       resultsEq(projectResults, extractAValues(expectedWithUndefined)),
+                   projectResults);
+        }());
+
+        (function testNotInNullAndRegexQuery() {
+            // While $nin: [null, ...] can be indexed, $nin: [<regex>] cannot. Ensure that we get
+            // the correct results in this case.
+            const query = {a: {$nin: [null, /^hi.*/]}};
+            const noProjectResults = coll.find(query).toArray();
+            const expected = [
+                {_id: "a_empty_subobject", a: {}},
+                {_id: "a_empty_subobject", a: 4},
+                {_id: "a_subobject_b_not_null", a: {b: "hi"}},
+                {_id: "a_subobject_b_null", a: {b: null}},
+                {_id: "a_subobject_b_undefined", a: {b: undefined}},
+
+                // TODO: SERVER-21929: $in may (or may not) miss fields with value "undefined".
+                {_id: "a_undefined", a: undefined},
+            ];
+            assert(resultsEq(noProjectResults, expected), tojson(noProjectResults));
+
+            const projectResults = coll.find(query, projectToOnlyA).toArray();
+            assert(resultsEq(projectResults, extractAValues(expected)), tojson(projectResults));
+        }());
+
+        (function testExistsFalse() {
+            const noProjectResults = coll.find({a: {$exists: false}}).toArray();
+            const expected = [
+                {_id: "no_a"},
+            ];
+            assert(resultsEq(noProjectResults, expected), tojson(noProjectResults));
+
+            const projectResults = coll.find({a: {$exists: false}}, projectToOnlyA).toArray();
+            assert(resultsEq(projectResults, extractAValues(expected)), tojson(projectResults));
+        }());
+
         // Test the semantics of the query {"a.b": {$eq: null}}.
         (function testDottedEqualsNull() {
             const noProjectResults = coll.find({"a.b": {$eq: null}}).toArray();
@@ -92,6 +149,22 @@
 
             const projectResults = coll.find({"a.b": {$ne: null}}, projectToOnlyADotB).toArray();
             assert(resultsEq(projectResults, [{a: {b: "hi"}}]), tojson(projectResults));
+        }());
+
+        (function testDottedExistsFalse() {
+            const noProjectResults = coll.find({"a.b": {$exists: false}}).toArray();
+            const expected = [
+                {_id: "no_a"},
+                {_id: "a_empty_subobject", a: {}},
+                {_id: "a_null", a: null},
+                {_id: "a_number", a: 4},
+                {_id: "a_undefined", a: undefined},
+            ];
+            assert(resultsEq(noProjectResults, expected), tojson(noProjectResults));
+
+            const projectResults =
+                coll.find({"a.b": {$exists: false}}, projectToOnlyADotB).toArray();
+            assert(resultsEq(projectResults, [{}, {a: {}}, {}, {}, {}]), tojson(projectResults));
         }());
 
         // Test similar queries, but with an $elemMatch. These queries should have no results since
@@ -183,6 +256,76 @@
 
             const projectResults = coll.find({a: {$ne: null}}, projectToOnlyA).toArray();
             assert(resultsEq(projectResults, extractAValues(expected)), tojson(projectResults));
+        }());
+
+        // Test the semantics of the query {a: {$nin: [null, <number>]}}.
+        (function testNotInNullQuery() {
+            const query = {a: {$nin: [null, 75]}};
+            const noProjectResults = coll.find(query).toArray();
+            const expected = [
+                {_id: "a_empty_subobject", a: {}},
+                {_id: "a_number", a: 4},
+                {_id: "a_subobject_b_not_null", a: {b: "hi"}},
+                {_id: "a_subobject_b_null", a: {b: null}},
+                {_id: "a_subobject_b_undefined", a: {b: undefined}},
+
+                {_id: "a_double_array", a: [[]]},
+                {_id: "a_empty_array", a: []},
+                {_id: "a_object_array_all_b_nulls", a: [{b: null}, {b: undefined}, {b: null}, {}]},
+                {_id: "a_object_array_no_b_nulls", a: [{b: 1}, {b: 3}, {b: "string"}]},
+                {_id: "a_object_array_some_b_nulls", a: [{b: null}, {b: 3}, {b: null}]},
+                {_id: "a_object_array_some_b_undefined", a: [{b: undefined}, {b: 3}]},
+                {_id: "a_object_array_some_b_missing", a: [{b: 3}, {}]},
+                {_id: "a_value_array_no_nulls", a: [1, "string", 4]},
+            ];
+
+            // TODO: SERVER-21929: $in may (or may not) miss fields with value "undefined".
+            const expectedWithUndefined = expected.concat([
+                {_id: "a_undefined", a: undefined},
+                {_id: "a_value_array_with_undefined", a: [1, "string", undefined, 4]},
+            ]);
+            assert(resultsEq(noProjectResults, expected) ||
+                       resultsEq(noProjectResults, expectedWithUndefined),
+                   noProjectResults);
+
+            const projectResults = coll.find(query, projectToOnlyA).toArray();
+            assert(resultsEq(projectResults, extractAValues(expected)) ||
+                       resultsEq(projectResults, extractAValues(expectedWithUndefined)),
+                   projectResults);
+        }());
+
+        (function testNotInNullAndRegexQuery() {
+            const query = {a: {$nin: [null, /^str.*/]}};
+            const noProjectResults = coll.find(query).toArray();
+            const expected = [
+                {_id: "a_empty_subobject", a: {}},
+                {_id: "a_number", a: 4},
+                {_id: "a_subobject_b_not_null", a: {b: "hi"}},
+                {_id: "a_subobject_b_null", a: {b: null}},
+                {_id: "a_subobject_b_undefined", a: {b: undefined}},
+
+                {_id: "a_double_array", a: [[]]},
+                {_id: "a_empty_array", a: []},
+                {_id: "a_object_array_all_b_nulls", a: [{b: null}, {b: undefined}, {b: null}, {}]},
+                {_id: "a_object_array_no_b_nulls", a: [{b: 1}, {b: 3}, {b: "string"}]},
+                {_id: "a_object_array_some_b_nulls", a: [{b: null}, {b: 3}, {b: null}]},
+                {_id: "a_object_array_some_b_undefined", a: [{b: undefined}, {b: 3}]},
+                {_id: "a_object_array_some_b_missing", a: [{b: 3}, {}]},
+            ];
+
+            // TODO: SERVER-21929: $in may (or may not) miss fields with value "undefined".
+            const expectedWithUndefined = expected.concat([
+                {_id: "a_undefined", a: undefined},
+            ]);
+
+            assert(resultsEq(noProjectResults, expected) ||
+                       resultsEq(noProjectResults, expectedWithUndefined),
+                   noProjectResults);
+
+            const projectResults = coll.find(query, projectToOnlyA).toArray();
+            assert(resultsEq(projectResults, extractAValues(expected)) ||
+                       resultsEq(projectResults, extractAValues(expectedWithUndefined)),
+                   projectResults);
         }());
 
         // Test the results of similar queries with an $elemMatch.
@@ -297,6 +440,65 @@
                                {a: []}
                              ]),
                    tojson(projectResults));
+        }());
+
+        // Test the semantics of the query {a.b: {$nin: [null, <number>]}}.
+        (function testDottedNotInNullQuery() {
+            const query = {"a.b": {$nin: [null, 75]}};
+            const noProjectResults = coll.find(query).toArray();
+            const expected = [
+                {_id: "a_subobject_b_not_null", a: {b: "hi"}},
+                {_id: "a_double_array", a: [[]]},
+                {_id: "a_empty_array", a: []},
+                {_id: "a_object_array_no_b_nulls", a: [{b: 1}, {b: 3}, {b: "string"}]},
+                {_id: "a_value_array_all_nulls", a: [null, null]},
+                {_id: "a_value_array_no_nulls", a: [1, "string", 4]},
+                {_id: "a_value_array_with_null", a: [1, "string", null, 4]},
+                {_id: "a_value_array_with_undefined", a: [1, "string", undefined, 4]},
+            ];
+
+            // TODO: SERVER-21929: $in may (or may not) miss fields with value "undefined".
+            const expectedWithUndefined = expected.concat([
+                {_id: "a_object_array_some_b_undefined", a: [{b: undefined}, {b: 3}]},
+                {_id: "a_subobject_b_undefined", a: {b: undefined}},
+            ]);
+            assert(resultsEq(noProjectResults, expected) ||
+                       resultsEq(noProjectResults, expectedWithUndefined),
+                   noProjectResults);
+
+            const projectResults = coll.find(query, projectToOnlyA).toArray();
+            assert(resultsEq(projectResults, extractAValues(expected)) ||
+                       resultsEq(projectResults, extractAValues(expectedWithUndefined)),
+                   projectResults);
+        }());
+
+        // Test the semantics of the query {a.b: {$nin: [null, <regex>]}}.
+        (function testDottedNotInNullAndRegexQuery() {
+            const query = {"a.b": {$nin: [null, /^str.*/]}};
+            const noProjectResults = coll.find(query).toArray();
+            const expected = [
+                {_id: "a_subobject_b_not_null", a: {b: "hi"}},
+                {_id: "a_double_array", a: [[]]},
+                {_id: "a_empty_array", a: []},
+                {_id: "a_value_array_all_nulls", a: [null, null]},
+                {_id: "a_value_array_no_nulls", a: [1, "string", 4]},
+                {_id: "a_value_array_with_null", a: [1, "string", null, 4]},
+                {_id: "a_value_array_with_undefined", a: [1, "string", undefined, 4]},
+            ];
+
+            // TODO: SERVER-21929: $in may (or may not) miss fields with value "undefined".
+            const expectedWithUndefined = expected.concat([
+                {_id: "a_object_array_some_b_undefined", a: [{b: undefined}, {b: 3}]},
+                {_id: "a_subobject_b_undefined", a: {b: undefined}},
+            ]);
+            assert(resultsEq(noProjectResults, expected) ||
+                       resultsEq(noProjectResults, expectedWithUndefined),
+                   noProjectResults);
+
+            const projectResults = coll.find(query, projectToOnlyA).toArray();
+            assert(resultsEq(projectResults, extractAValues(expected)) ||
+                       resultsEq(projectResults, extractAValues(expectedWithUndefined)),
+                   projectResults);
         }());
 
         // Test the results of similar dotted queries with an $elemMatch. These should have no
